<resources>

    <!-- app -->
    <string name="app_name">GuessWhat</string>

    <!-- common -->
    <string name="_accept">Accept</string>
    <string name="_cancel">Cancel</string>
    <string name="_change">Change</string>
    <string name="_choose">Choose</string>
    <string name="_delete">Delete</string>
    <string name="_discard">Discard</string>
    <string name="_internalError">Internal error</string>
    <string name="_ok">OK</string>
    <string name="_pending">Pending</string>
    <string name="_refresh">Refresh</string>
    <string name="_reject">Reject</string>
    <string name="_save">Save</string>

    <string name="_validation_hint_fieldEmpty">This field can\'t be empty.</string>
    <string name="_validation_hint_invalidEmail">This is not a valid email.</string>
    <string name="_validation_hint_validUserName">User name must contain only letters, numbers \'.\' and \'_\'</string>
    <string name="_validation_hint_validPassword">Password must contain letters and numbers.\nMinimum length is 8 characters.</string>
    <string name="_validation_hint_passwordMismatch">Password mismatch.</string>

    <string name="_version">Version</string>

    <!-- activities -->
    <string name="about_title">About</string>
    <string name="about_gameCreator">GuessWhat is an awesome game\ncreated by Jörnsa &amp; Martinko.</string>

    <string name="createGame_title">"Create game"</string>
    <string name="createGame_gameTitle">Game title</string>
    <string name="createGame_gameHints">Helping hints</string>
    <string name="createGame_gamePicture">Picture of the game</string>
    <string name="createGame_gameSolution">Solution to the game</string>
    <string name="createGame_gameType">Game type</string>

    <string name="friends_addFriend">Add new friend</string>
    <string name="friends_bt_pendingRequests">Show pending requests</string>
    <string name="friends_ib_hintPendingRequests">Pending requests available</string>
    <string name="friends_title">Friends</string>
    <string name="friends_dialog_title">New friend</string>
    <string name="friends_dialog_prompt">Enter your friend\'s name</string>
    <string name="friends_dialog_noSelfFriendship">"No self-friendships!"</string>
    <string name="friends_dialog_existingFriend">"You are already friends with "</string>
    <string name="friends_dialog_nonExistingFriend">"Database found no user named "</string>
    <string name="friends_dialog_existingInvite">"You are now friends with "</string>
    <string name="friends_dialog_existingRequest">"You already sent a request to "</string>
    <string name="friends_dialog_requestSent">"Sent friend request to "</string>
    <string name="friends_dialog_requestFailed">"Failed to send friend request to "</string>
    <string name="friends_hintEmptyList">Your friend list is empty.</string>

    <string name="friends_tab_invites_title">Invites</string>
    <string name="friends_tab_friends_title">Friends</string>
    <string name="friends_tab_requests_title">Requests</string>
    <string name="friends_tab_invites_subtitle">People asking for your friendship.</string>
    <string name="friends_tab_friends_subtitle">Your current friend list.</string>
    <string name="friends_tab_requests_subtitle">Friendships you have requested.</string>



    <string name="friends_dialog_invite_title">Invite</string>
    <string name="friends_dialog_invite_prompt">Accept or reject invite from </string>

    <string name="friends_dialog_friend_title">Friendship</string>
    <string name="friends_dialog_friend_prompt">Delete friendship with </string>

    <string name="friends_dialog_request_title">Request</string>
    <string name="friends_dialog_request_prompt">Discard request for friendship to </string>

    <string name="games_title">Games</string>

    <string name="games_mi_createGame">Create Game</string>

    <string name="games_tab_review_title">Review</string>
    <string name="games_tab_play_title">Play</string>
    <string name="games_tab_create_title">Create</string>
    <string name="games_tab_review_subtitle">Games you have finished.</string>
    <string name="games_tab_play_subtitle">Games to play.</string>
    <string name="games_tab_create_subtitle">Games you have created.</string>

    <string name="help_title">Help</string>

    <string name="login_email">Email</string>
    <string name="login_userName">User name</string>
    <string name="login_password">Password</string>
    <string name="login_passwordRepeat">Password (confirm)</string>
    <string name="login_tv_hintCreateAccount">Create new account</string>
    <string name="login_tv_hintRecoverPassword">Send recovery mail to</string>
    <string name="login_bt_signIn">Sign in</string>
    <string name="login_bt_newHere">New here ?</string>
    <string name="login_bt_lostPassword">Lost password ?</string>
    <string name="login_bt_createAccount">Create account</string>
    <string name="login_bt_recoverPassword">Recover password</string>
    <string name="login_title">Welcome</string>
    <string name="login_errorFailedLogin">Wrong password or user name!</string>
    <string name="login_userNameTaken">User name already assigned.</string>
    <string name="login_emailTaken">Email already assigned.</string>

    <string name="main_title">Home</string>

    <string name="navigation_item_games">Games</string>
    <string name="navigation_item_friends">Friends</string>
    <string name="navigation_item_settings">Settings</string>
    <string name="navigation_item_about">About</string>
    <string name="navigation_item_logout">Sign out</string>
    <string name="navigation_openDrawer">Open navigation drawer</string>
    <string name="navigation_closeDrawer">Close navigation drawer</string>

    <string name="pendingFriends_title">Pending</string>
    <string name="pendingFriends_bt_received">Received</string>
    <string name="pendingFriends_bt_sent">Sent</string>
    <string name="pendingFriends_tv_hintNoRequestsSent">You\'ve sent no friendship requests recently.</string>
    <string name="pendingFriends_tv_hintNoRequestsReceived">You\'ve received no friendship requests recently.</string>
    <string name="pendingFriends_requestState_rejected">Rejected</string>
    <string name="pendingFriends_dialog_title">Request for friendship</string>
    <string name="pendingFriends_dialog_requesterMessage">"Discard friendship request for "</string>
    <string name="pendingFriends_dialog_acceptorMessage">" is requesting your friendship."</string>

    <string name="settings_title">Settings</string>


</resources>