<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:animateLayoutChanges="true"
    >

    <TextView
        android:id="@+id/tv_editHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:paddingBottom="16dp"
        />

    <EditText
        android:id="@+id/et_userName"
        android:hint="@string/login_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        />

    <EditText
        android:id="@+id/et_email"
        android:inputType="textEmailAddress"
        android:hint="@string/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_password"
        android:inputType="textPassword"
        android:hint="@string/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_passwordRepeat"
        android:inputType="textPassword"
        android:hint="@string/login_passwordRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/ll_buttonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/bt_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_bt_signIn"
            />

        <Button
            android:id="@+id/bt_createAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/bt_recoverPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        </LinearLayout>

</LinearLayout>
